<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LoveGame_Project</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_menu">MainActivity</string>
    <string name="title_activity_menu_love">MenuLove</string>
    <string name="title_activity_menu_main_">MenuMain_</string>
    <string name="title_activity_enviar_pergunta">EnviarPergunta</string>
    <string name="title_activity_mandar_pergunta">MandarPergunta</string>
    <string name="title_activity_achievements_menu">Achievements_menu</string>

    <!-- Device List -->
    <string name="title_activity_device_list">Lista de Dispositivos</string>
    <string name="scanButton">Procurar novos dispositivos</string>
    <string name="listaDePareados">Pareados</string>
    <string name="NewDevices">Dispositivos encontrados</string>

    <!-- Activity Principal -->
    <string name="turn_bt_on">Ligar Bluetooth</string>
    <string name="turn_bt_off">Desligar Bluetooth</string>
    <string name="connect">Conectar a um dispositivo</string>
    <string name="leave">Sair</string>
    <string name="title_activity_chat">Chat</string>

    <!-- Chat Activity -->
    <string name="send_button"> Enviar </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_creditos">Creditos</string>
    <string name="title_activity_instrucoes">Instrucoes</string>

</resources>