
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DeviceList" >

    <TextView
        android:id="@+id/pairedDevicesTittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listaDePareados"
         >
    </TextView>

    <ListView
        android:id="@+id/paired_devices"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_weight="0.03" />

    <TextView
        android:id="@+id/newDevicesTittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NewDevices" >
    </TextView>

    <ListView
        android:id="@+id/new_devices"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_weight="0.02" />

    <Button
        android:id="@+id/button_scan"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:onClick="onClick_Scan"
        android:textColor="@android:color/white"
        android:background="@android:color/background_dark"
        android:text="@string/scanButton" />

</LinearLayout>